--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/react-dom": "18.0.8",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "typescript": "4.8.4"
   }
 }
